codama-syn-helpers/tests/meta/as_path/from_path_list.fail.stderr
error: unexpected tokens, expected a single path
 --> tests/meta/as_path/from_path_list.fail.rs:3:14
  |
3 | #[as_path(foo(1, 2, 3))]
  |              ^^^^^^^^^

error: unexpected tokens, expected a single path
 --> tests/meta/as_path/from_path_list.fail.rs:6:17
  |
6 | #[as_path(foo = (1, 2, 3))]
  |                 ^^^^^^^^^
